Prevent .lead from breaking to three lines on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -8020,7 +8020,7 @@ ul + p {
     font-size: 30px;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .front .lead {
     padding-right: 25%;
   }
