--- a/less/content.less
+++ b/less/content.less
@@ -95,7 +95,7 @@ ul + p {
       height: (7 * @line-height-computed);
       font-size: @font-size-h2;
     }
-    @media (min-width: @screen-sm-min) {
+    @media (min-width: @screen-md-min) {
       padding-right: 25%;
     }
 
